chore: Fix null pointer exception while storing in-progress workflow jobs
fixes #989